tests/ctu/pass/unused-var.ct
var x: int;

def f(y: int): int {
    return x + y;
    var z: bool;
}

export def main(): int {}