tests/ctu/fail/incorrect-return1.ct
export def main(): int {
    return;
}
